--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
           <a
             href="https://github.com/bens-schreiber/bmin-schreib"
             target="_blank"
-            >Last updated: 12/16/2024</a
+            >Last updated: 2/12/2025</a
           >
         </li>
         <li><a href="#">Home</a></li>
@@ -200,43 +200,26 @@
               <li>RayLib</li>
             </ul>
           </div>
-          <div class="card">
-            <span
-              class="iconify mx-auto"
-              data-icon="devicon:go-wordmark"
-              data-inline="false"
-              style="font-size: 6rem"
-            ></span>
-            <h3 class="skill-header">Golang</h3>
-            <ul class="skill-items">
-              <li>Gin</li>
-              <li>Gorm</li>
-            </ul>
-          </div>
         </div>
       </div>
 
       <div>
-        <h2 class="article-title">NOTABLE WORK</h2>
+        <h2 class="article-title">PROFESSIONAL WORK</h2>
         <hr />
         <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-12 mx-3">
           <div class="card">
             <h3 class="font-bold">1ON1 Piano (IntelliTect, VPL LLC)</h3>
             <ul class="font-medium">
               <li>
-                Recreated and upgraded a mobile app to facilitate piano lessons
-                via MIDI, enhancing user experience by streamlining lesson
-                delivery
+                Recreated and upgraded a Flutter mobile app to facilitate piano lessons via a WebRTC MIDI channel, streamlining lesson delivery.
               </li>
               <br />
               <li>
-                Addressed WebRTC layer issues, reducing network related dropped
-                calls by 90%
+                Addressed WebRTC layer issues, reducing network related dropped calls.              
               </li>
               <br />
               <li>
-                Spearheaded the implementation of a user File Sharing Library w/
-                Azure Blob storage
+                Implemented a full stack user “File Sharing Library” with Azure Blob Storage, alongside a SignalR channel for real-time app updates.
               </li>
             </ul>
           </div>
@@ -246,20 +229,15 @@
             </h3>
             <ul class="font-medium">
               <li>
-                Developed a concurrent voting system to synchronize end devices
-                in real-time, utilizing Redis concurrent queues, enhancing user
-                engagement and participation
+                Engineered a dynamic real-time word cloud, achieving seamless interaction for thousands of concurrent users.
               </li>
               <br />
               <li>
-                Engineered a dynamic real-time word cloud, achieving seamless
-                interaction for thousands of concurrent users
+                Developed a concurrent voting system to synchronize end devices in real-time, utilizing concurrent queues in a repository pattern, enhancing user engagement and participation. 
               </li>
               <br />
               <li>
-                Implemented an algorithm for proportional word sizing in
-                constant time, optimizing display efficiency and user experience
-                in data visualization
+                Implemented an algorithm for proportional word sizing in constant time, optimizing display efficiency and user experience in data visualization.
               </li>
             </ul>
           </div>
@@ -270,20 +248,15 @@
             </h3>
             <ul class="font-medium">
               <li>
-                Recreated a decade-old SQL database via reverse scaffolding,
-                enhancing data integrity and access speed, significantly
-                improving query performance.
+                Recreated a decade-old SQL Server database, enhancing data integrity and access speed and removing redundancies, significantly improving query performance.
               </li>
               <br />
               <li>
-                Modernized an outdated .NET implementation, eliminating
-                antipatterns and deprecated techniques, which increased system
-                reliability and maintenance efficiency
+                Modernized an outdated ASP.NET implementation, eliminating antipatterns and deprecated techniques, which increased system reliability.
               </li>
               <br />
               <li>
-                Reengineered the front end to mirror a contemporary search
-                engine, boosting user engagement and search efficiency
+                Reengineered front end to mirror a contemporary search engine, implementing search query indexing with Lucene.NET, boosting user engagement and search efficiency
               </li>
             </ul>
           </div>
