--- a/public/index.html
+++ b/public/index.html
@@ -413,12 +413,13 @@
           </div>
 
           <div class="card">
-            <img
-              src="assets/raylib.png"
-              alt="Raylib Logo"
-              class="mx-auto h-28"
-            />
-            <h3 class="skill-header mt-5">Rendered with Raylib</h3>
+            <span
+              class="iconify mx-auto"
+              data-icon="mdi:play"
+              data-inline="false"
+              style="font-size: 7rem"
+            ></span>
+            <h3 class="skill-header mt-5 underline"><a href="vpt.html">Preview WASM Demo (Desktop Only)</a></h3>
           </div>
           
           <div class="card">
