--- a/public/index.html
+++ b/public/index.html
@@ -413,13 +413,12 @@
           </div>
 
           <div class="card">
-            <span
-              class="iconify mx-auto"
-              data-icon="mdi:play"
-              data-inline="false"
-              style="font-size: 7rem"
-            ></span>
-            <h3 class="skill-header mt-5 underline"><a href="vpt.html">Preview WASM Demo (Desktop Only)</a></h3>
+            <img
+              src="assets/raylib.png"
+              alt="Raylib Logo"
+              class="mx-auto h-28"
+            />
+            <h3 class="skill-header mt-5 underline"><a href="vpt.html">Created With Raylib</a></h3>
           </div>
           
           <div class="card">
@@ -446,6 +445,14 @@
             Your browser does not support the video tag.
           </video>
         </div>
+      </div>
+
+      <div class="hidden md:block">
+        <h2 class="article-title">VIRTUAL PACKET TRACER LIVE DEMO</h2>
+        <hr />
+        <script src="assets/vpt/virtual-packet-tracer.js"></script>
+        <script src="assets/vpt/load.js" defer></script>
+        <canvas height="500" width="800" id="canvas" class="bg-black m-auto mt-12"></canvas>
       </div>
 
       <div>
