--- a/src/index.html
+++ b/src/index.html
@@ -439,11 +439,11 @@
             </a>
           </div>
 
-          <video controls class="m-auto">
+          <video controls class="m-auto" preload="none">
             <source src="assets/vpt-1.mov" type="video/quicktime" />
             Your browser does not support the video tag.
           </video>
-          <video controls class="m-auto">
+          <video controls class="m-auto" preload="none">
             <source src="assets/vpt-2.mov" type="video/quicktime" />
             Your browser does not support the video tag.
           </video>
