--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,11 @@
       </ul>
     </nav>
 
+    <div class="md:h-10"></div>
+
     <!-- "Logo" -->
     <header class="flex justify-center space-x-3">
-      <h1 class="font-bold text-5xl md:text-9xl">
+      <h1 class="font-bold text-6xl md:text-[9vw]">
         <span class="text-dark"
           >bschr<span class="text-primary">:/resume$</span></span
         >_
@@ -47,12 +49,11 @@
             class="flex items-center space-x-3"
           >
             <span
-              class="iconify"
+              class="iconify footer-icon"
               data-icon="logos:linkedin-icon"
               data-inline="false"
-              style="font-size: 2rem"
             ></span>
-            <span class="hidden sm:inline">Benjamin Schreiber</span>
+            <span class="hidden md:inline text-xl">Benjamin Schreiber</span>
           </a>
         </li>
         <li>
@@ -62,12 +63,11 @@
             class="flex items-center space-x-3"
           >
             <span
-              class="iconify"
+              class="iconify footer-icon"
               data-icon="logos:github-icon"
               data-inline="false"
-              style="font-size: 2rem"
             ></span>
-            <span class="hidden sm:inline">bens-schreiber</span>
+            <span class="hidden md:inline text-xl">bens-schreiber</span>
           </a>
         </li>
         <li>
@@ -77,12 +77,13 @@
             class="flex items-center space-x-3"
           >
             <span
-              class="iconify"
+              class="iconify footer-icon"
               data-icon="mdi:email"
               data-inline="false"
-              style="font-size: 2rem"
             ></span>
-            <span class="hidden sm:inline">bpschreiber2003@gmail.com</span>
+            <span class="hidden md:inline text-xl"
+              >bpschreiber2003@gmail.com</span
+            >
           </a>
         </li>
       </ul>
@@ -366,14 +367,15 @@
       </section>
     </article>
 
+    <div class="md:h-10"></div>
+
     <!-- "Logo" (again) -->
     <header id="portfolio" class="text-center text-5xl md:text-9xl">
-      <div class="opacity-40">.</div>
-      <div class="opacity-65">.</div>
-      <div class="mb-10">.</div>
-      <div class="font-bold">
-        bschr<span class="text-primary">:/portfolio$</span>_
-      </div>
+      <h1 class="font-bold text-6xl md:text-[9vw]">
+        <span class="text-dark"
+          >bschr<span class="text-primary">:/portfolio$</span></span
+        >_
+      </h1>
     </header>
 
     <div class="md:h-10"></div>
@@ -683,7 +685,7 @@
     </article>
 
     <!-- Socials (again) -->
-    <footer class="pb-10">
+    <footer>
       <ul class="flex justify-center space-x-12">
         <li>
           <a
@@ -692,12 +694,11 @@
             class="flex items-center space-x-3"
           >
             <span
-              class="iconify"
+              class="iconify footer-icon"
               data-icon="logos:linkedin-icon"
               data-inline="false"
-              style="font-size: 2rem"
             ></span>
-            <span class="hidden sm:inline">Benjamin Schreiber</span>
+            <span class="hidden md:inline text-xl">Benjamin Schreiber</span>
           </a>
         </li>
         <li>
@@ -707,12 +708,11 @@
             class="flex items-center space-x-3"
           >
             <span
-              class="iconify"
+              class="iconify footer-icon"
               data-icon="logos:github-icon"
               data-inline="false"
-              style="font-size: 2rem"
             ></span>
-            <span class="hidden sm:inline">bens-schreiber</span>
+            <span class="hidden md:inline text-xl">bens-schreiber</span>
           </a>
         </li>
         <li>
@@ -722,15 +722,18 @@
             class="flex items-center space-x-3"
           >
             <span
-              class="iconify"
+              class="iconify footer-icon"
               data-icon="mdi:email"
               data-inline="false"
-              style="font-size: 2rem"
             ></span>
-            <span class="hidden sm:inline">bpschreiber2003@gmail.com</span>
+            <span class="hidden md:inline text-xl"
+              >bpschreiber2003@gmail.com</span
+            >
           </a>
         </li>
       </ul>
     </footer>
+
+    <div class="md:h-10"></div>
   </body>
 </html>
