--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 
     <!-- "Logo" -->
     <header class="flex justify-center space-x-3">
-      <h1 class="font-bold text-6xl md:text-[9vw]">
+      <h1 class="font-bold text-5xl md:text-[9vw]">
         <span class="text-dark"
           >bschr<span class="text-primary">:/resume$</span></span
         >_
@@ -370,8 +370,8 @@
     <div class="md:h-10"></div>
 
     <!-- "Logo" (again) -->
-    <header id="portfolio" class="text-center text-5xl md:text-9xl">
-      <h1 class="font-bold text-6xl md:text-[9vw]">
+    <header id="portfolio" class="text-center md:text-9xl">
+      <h1 class="font-bold text-5xl md:text-[9vw]">
         <span class="text-dark"
           >bschr<span class="text-primary">:/portfolio$</span></span
         >_
