--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,9 @@
           >
         </li>
         <li><a href="#">Home</a></li>
+        |
         <li><a href="#portfolio">Portfolio</a></li>
+        |
         <li><a href="/resume.pdf">Resume</a></li>
       </ul>
     </nav>
@@ -32,7 +34,7 @@
 
     <!-- "Logo" -->
     <header class="flex justify-center space-x-3">
-      <h1 class="font-bold text-5xl md:text-[9vw]">
+      <h1 class="font-bold text-[11vw] md:text-[8vw]">
         <span class="text-dark"
           >bschr<span class="text-primary">:/resume$</span></span
         >_
@@ -371,7 +373,7 @@
 
     <!-- "Logo" (again) -->
     <header id="portfolio" class="text-center md:text-9xl">
-      <h1 class="font-bold text-5xl md:text-[9vw]">
+      <h1 class="font-bold text-[11vw] md:text-[8vw]">
         <span class="text-dark"
           >bschr<span class="text-primary">:/portfolio$</span></span
         >_
