--- a/src/index.html
+++ b/src/index.html
@@ -372,7 +372,7 @@
     <div class="md:h-10"></div>
 
     <!-- "Logo" (again) -->
-    <header id="portfolio" class="text-center md:text-9xl">
+    <header id="portfolio" class="text-center">
       <h1 class="font-bold text-[11vw] md:text-[8vw]">
         <span class="text-dark"
           >bschr<span class="text-primary">:/portfolio$</span></span
