add vite to resume

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           <a
             href="https://github.com/bens-schreiber/bmin-schreib"
             target="_blank"
-            >Last updated: 2/28/2025</a
+            >Last updated: 3/04/2025</a
           >
         </li>
         <li><a href="#">Home</a></li>
@@ -170,6 +170,7 @@
             <ul class="skill-items">
               <li>Vue</li>
               <li>WebRTC</li>
+              <li>Vite</li>
             </ul>
           </div>
 
