--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
       </ul>
     </nav>
 
-    <div class="md:h-10"></div>
+    <div></div>
 
     <!-- "Logo" -->
     <header class="flex justify-center space-x-3">
