--- a/public/vpt.html
+++ b/public/vpt.html
@@ -28,11 +28,9 @@
   <body>
     <canvas id="canv"></canvas>
     <h4 class="info">
-      Intended for Desktop only. Due to Raylib WASM, text appears blurry. For
-      the best experience, clone the repo
-
+      WASM build of Virtual Packet Tracer by Benjamin Schreiber.
       <a
-        href="https://github.com/bens-schreiber/virtual-packet-tracer/commits?author=bens-schreiber"
+        href="https://github.com/bens-schreiber/virtual-packet-tracer/"
         target="_blank"
         >View the repo</a
       >
