Updated to new vpt version

--- a/public/vpt.html
+++ b/public/vpt.html
@@ -1,54 +1,50 @@
-<!-- Self contained HTML for the Virtual Packet Tracer Demo -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Virtual Packet Tracer Demo</title>
+    <style>
+      body {
+        margin: 0;
+        background-color: black;
+        display: flex;
+        justify-content: center;
+        height: 100vh;
+        position: relative;
+      }
+
+      canvas {
+        outline: none;
+      }
+
+      .overlay-text {
+        position: absolute;
+        top: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        text-decoration: none;
+      }
+    </style>
   </head>
-  <style>
-    body {
-      background-color: #2f2f2f;
-    }
-
-    canvas {
-      border: 1px solid #000;
-      background-color: #000;
-      display: block;
-      margin: auto auto;
-    }
-
-    .info {
-      color: white;
-      text-align: center;
-      margin-top: 30px;
-    }
-  </style>
   <body>
-    <canvas id="canv"></canvas>
-    <h4 class="info">
-      WASM build of Virtual Packet Tracer by Benjamin Schreiber.
-      <a
-        href="https://github.com/bens-schreiber/virtual-packet-tracer/"
-        target="_blank"
-        >View the repo</a
-      >
-    </h4>
+    <canvas id="canvas" tabindex="0"></canvas>
+    <a
+      href="https://github.com/bens-schreiber/virtual-packet-tracer/"
+      class="overlay-text"
+      target="_blank"
+      >View GitHub</a
+    >
 
     <script src="/virtual-packet-tracer.js"></script>
     <script>
       window.onload = function () {
-        Module["canvas"] = document.getElementById("canv");
+        Module["canvas"] = document.getElementById("canvas");
+        Module.canvas.width = 1400;
+        Module.canvas.height = 750;
 
-        // Prevent right clicks from opening the context menu
         Module.canvas.addEventListener("contextmenu", function (event) {
-          event.preventDefault();
-          event.stopPropagation();
-        });
-
-        canvas.addEventListener("click", function (event) {
-          event.preventDefault();
+          event.preventDefault(); // Prevent right clicks from opening the context menu
           event.stopPropagation();
         });
       };
