--- a/public/vpt.html
+++ b/public/vpt.html
@@ -3,7 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Virtual Packet Tracer Demo</title>
+
+    <meta
+      name="description"
+      content="Virtual Packet Tracer is a network simulation tool that allows users to create and simulate network topologies for layers 1-3 of the OSI model."
+    />
+    <meta
+      name="keywords"
+      content="packet tracer, cisco packet tracer, stp, rstp,"
+    />
+    <meta name="author" content="Benjamin Schreiber" />
+
+    <meta property="og:title" content="Virtual Packet Tracer" />
+    <meta
+      property="og:description"
+      content="A network simulation tool that allows users to create and simulate network topologies for layers 1-3 of the OSI model."
+    />
+    <meta property="og:url" content="https://bschr.dev/vpt" />
+    <meta property="og:type" content="website" />
+
+    <title>Virtual Packet Tracer</title>
     <style>
       body {
         margin: 0;
@@ -25,16 +44,47 @@
         transform: translateX(-50%);
         text-decoration: none;
       }
+
+      .mobile-text {
+        display: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        color: white;
+      }
+
+      @media (max-width: 1024px) {
+        canvas {
+          display: none;
+        }
+
+        .mobile-text {
+          display: block;
+        }
+      }
     </style>
   </head>
   <body>
-    <canvas id="canvas" tabindex="0"></canvas>
-    <a
-      href="https://github.com/bens-schreiber/virtual-packet-tracer/"
-      class="overlay-text"
-      target="_blank"
-      >View GitHub</a
-    >
+    <header>
+      <nav>
+        <a
+          href="https://github.com/bens-schreiber/virtual-packet-tracer/"
+          class="overlay-text"
+          target="_blank"
+          >View on GitHub</a
+        >
+      </nav>
+    </header>
+
+    <main>
+      <div class="mobile-text">
+        <p><strong>VPT does not display on mobile.</strong></p>
+        <p>Please use a desktop for the best experience.</p>
+      </div>
+      <canvas id="canvas" tabindex="0"></canvas>
+    </main>
 
     <script src="/virtual-packet-tracer.js"></script>
     <script>
