tweak education wsu-img display

--- a/src/index.html
+++ b/src/index.html
@@ -112,24 +112,27 @@
           <h2 class="section-title">EDUCATION</h2>
           <hr class="mb-10" />
           <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-            <div class="card md:grid grid-cols-3">
-              <img
-                src="assets/wsu.svg"
-                alt="Washington State University Logo"
-                class="mx-auto h-28 col-span-1"
-              />
-              <ul class="col-span-2">
-                <li class="font-bold">Washington State University</li>
-                <li class="font-medium">B.S. in Computer Science</li>
-                <li class="font-medium">Minor in Mathematics</li>
-                <li class="font-medium">Expected Graduation: May, 2026</li>
-              </ul>
+            <div class="card lg:grid grid-cols-3">
+              <div class="col-span-1 lg:block md:hidden">
+                <img
+                  src="assets/wsu.svg"
+                  alt="Washington State University Logo"
+                  class="mx-auto h-28"
+                />
+              </div>
+              <div class="col-span-2">
+                <h3 class="font-bold">Washington State University</h3>
+                <ul class="list-disc ml-5">
+                  <li class="font-medium">B.S. in Computer Science</li>
+                  <li class="font-medium">Minor in Mathematics</li>
+                  <li class="font-medium">Expected Graduation: May, 2026</li>
+                </ul>
+              </div>
             </div>
 
             <div class="card">
               <h3 class="font-bold">Relevant Coursework</h3>
               <ul class="font-medium list-disc ml-5">
-                <li>Data Structures and Algorithms</li>
                 <li>Software Engineering</li>
                 <li>Systems Programming</li>
                 <li>Database Management Systems</li>
