lg to xl on wsu logo

--- a/src/index.html
+++ b/src/index.html
@@ -112,8 +112,8 @@
           <h2 class="section-title">EDUCATION</h2>
           <hr class="mb-10" />
           <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-            <div class="card lg:grid grid-cols-3">
-              <div class="col-span-1 lg:block md:hidden">
+            <div class="card xl:grid grid-cols-3">
+              <div class="col-span-1 xl:block md:hidden">
                 <img
                   src="assets/wsu.svg"
                   alt="Washington State University Logo"
