vpt added to nav

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,8 @@
           <li><a href="#portfolio">Portfolio</a></li>
           <li><span>|</span></li>
           <li><a href="/resume.pdf">Resume</a></li>
+          <li><span>|</span></li>
+          <li><a href="/vpt.html">VPT</a></li>
         </ul>
       </nav>
 
