--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <link href="/styles.css" rel="stylesheet" />
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
   </head>
-  <body class="mx-3 sm:mx-12 md:mx-[13vw]">
+  <body class="mx-5 sm:mx-12 md:mx-[13vw]">
     <header>
       <nav class="pt-6">
         <ul
@@ -35,6 +35,8 @@
           <li><span>|</span></li>
           <li><a href="/vpt.html">VPT</a></li>
           <span class="sm:w-full"></span>
+
+          <!-- Social media for tablets, desktops-->
           <li class="hidden sm:block">
             <ul class="mt-1 flex gap-x-3 items-center text-3xl">
               <li>
@@ -73,10 +75,8 @@
       </nav>
     </header>
 
-    <div class="my-3"></div>
-
     <main>
-      <article class="article relative">
+      <article class="article relative mt-3">
         <section
           class="flex text-center justify-center sm:justify-start sm:text-start"
         >
@@ -87,7 +87,41 @@
             </h2>
             <h2 class="md:text-lg font-light">Graduating May 2026</h2>
 
-            <!-- Social Media -->
+            <!-- Social Media for mobile -->
+            <ul
+              class="sm:hidden mt-1 flex gap-x-3 items-center justify-center text-3xl"
+            >
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/benjamin-schreiber-a14aa219a/"
+                  target="_blank"
+                >
+                  <span
+                    class="iconify footer-icon"
+                    data-icon="logos:linkedin-icon"
+                    data-inline="false"
+                  ></span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/bens-schreiber" target="_blank">
+                  <span
+                    class="iconify footer-icon"
+                    data-icon="logos:github-icon"
+                    data-inline="false"
+                  ></span>
+                </a>
+              </li>
+              <li>
+                <a href="mailto:bpschreiber2003@gmail.com" target="_blank">
+                  <span
+                    class="iconify footer-icon text-4xl"
+                    data-icon="mdi:email"
+                    data-inline="false"
+                  ></span>
+                </a>
+              </li>
+            </ul>
           </div>
         </section>
 
