--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
           <span class="sm:w-full"></span>
 
           <!-- Social media for tablets, desktops-->
-          <li class="hidden sm:block">
+          <li class="hidden-mobile">
             <ul class="mt-1 flex gap-x-3 items-center text-3xl">
               <li>
                 <a
@@ -82,10 +82,12 @@
         >
           <div>
             <h1 class="text-4xl md:text-5xl font-bold">Benjamin Schreiber</h1>
-            <h2 class="md:text-lg md:text-xl font-medium">
+            <h2 class="hidden-mobile text-lg text-xl font-medium">
               Washington State University - Computer Science, BS
             </h2>
-            <h2 class="md:text-lg font-light">Graduating May 2026</h2>
+            <h2 class="hidden-mobile text-lg font-light">
+              Graduating May 2026
+            </h2>
 
             <!-- Social Media for mobile -->
             <ul
