--- a/src/index.html
+++ b/src/index.html
@@ -258,6 +258,12 @@
           first being the networking components completely made from scratch,
           and the second being the graphical interface which uses both RayLib
           and RayGUI.
+
+          <br />
+          <br />
+
+          You can view a WASM compiled version of the program
+          <a class="underline" href="vpt.html">here</a>.
         </section>
       </article>
     </main>
